--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,24 +12,28 @@ stages:
     - task: UsePythonVersion@0
       inputs:
         versionSpec: '3.x'
+
     - script: |
-        echo "Installing Terraform"
+        echo "Installing Terraform manually..."
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
         sudo apt-get update -y
-        sudo apt-get install -y terraform
+        sudo apt-get install terraform -y
+
+        terraform -version
         cd terraform
         terraform init -backend=false
         terraform validate
-        terraform plan -out=tfplan.out
-      displayName: 'Validate & Plan Terraform code'
+      displayName: 'Install & Validate Terraform'
 
   - job: AppValidation
     steps:
     - task: UsePythonVersion@0
       inputs:
         versionSpec: '3.x'
+
     - script: |
         cd app
         pip install -r requirements.txt
         python -m py_compile app.py
-        pytest || echo "No tests found"
-      displayName: 'Validate & Test Python app'
+      displayName: 'Validate Python app'
